html audio player function

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
     <canvas></canvas>
   </div>
   
-  <audio preload="auto" autoplay="autoplay" id="myaudio" type="audio/mp4">
-        <source src="BattleStarz777.mp3">
+  <audio id="myaudio" >
+        <source src="BattleStarz777.mp3" type="audio/mp3">
   </audio>
+  
 <script src="main.js"></script>
 </body>
 </html>
