check if html player can read file

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <canvas></canvas>
   </div>
   
-  <audio id="myaudio" >
+  <audio id="myaudio" autoplay="autoplay">
         <source src="BattleStarz777.mp3" type="audio/mp3">
   </audio>
   
