fixed font margin

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1 class="zoomIn">THIRD DEGREE RECORDS</h1>
     </div>
     <div class="sub-title">
-            <h2 class="zoomIn">COMING SOON</h2>
+            <h2 class="zoomIn">Website<br>COMING SOON</h2>
         </div>
   </div>
   <div id="scene-container">
