--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="animate.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+    <script src="https://kit.fontawesome.com/c3c9035355.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/104/three.js"></script>
     <title>Third Degree Records</title>
 </head>
@@ -14,18 +16,20 @@
     <div class="title">
         <h1 class="zoomIn">THIRD DEGREE RECORDS</h1>
     </div>
-    <div class="sub-title">
-            <h2 class="zoomIn">Website<br>COMING SOON</h2>
-        </div>
+    
   </div>
   <div id="scene-container">
+     
     <!-- This div will hold our scene-->
     <canvas></canvas>
   </div>
   
   <audio id="myaudio" autoplay="autoplay">
-        <source src="BattleStarz777.mp3" type="audio/mp3">
+        <source id="myaudio" src="BattleStarz777.mp3" type="audio/mp3">
   </audio>
+  <div class="sub-title">
+      <button class="link"><a href="about.html">Enter</a></button>
+  </div>
   
 <script src="main.js"></script>
 </body>
