fixed font size mobile

--- a/contact.html
+++ b/contact.html
@@ -23,11 +23,11 @@
                         <li><a class="navigation" href="gallery.html">Gallery</a></li>
                         <li><a class="navigation" href="index.html">Shop</a></li>
                     </ul>
-                <span class="nav-icon" onclick="openSideMenu();"><i class="fas fa-bars"></i>
+                <span class="nav-icon"><i class="fas fa-bars"></i>
                 </span>
             </div>
             <div id="side-menu" class="side-nav">
-                <a href="#" class="btn-close" onclick="closeSideMenu();">&times</a>
+                <a href="#" class="btn-close" >&times</a>
                 <a href="index.html">Welcome</a>
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
