--- a/gallery.html
+++ b/gallery.html
@@ -24,11 +24,11 @@
                         <li><a class="navigation" href="index.html">Gallery</a></li>
                         <li><a class="navigation" href="index.html">Shop</a></li>
                     </ul>
-                <span class="nav-icon" onclick="openSideMenu();"><i class="fas fa-bars"></i>
+                <span class="nav-icon"><i class="fas fa-bars"></i>
                 </span>
             </div>
             <div id="side-menu" class="side-nav">
-                <a href="#" class="btn-close" onclick="closeSideMenu();">&times</a>
+                <a href="#" class="btn-close">&times</a>
                 <a href="index.html">Welcome</a>
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
@@ -73,7 +73,7 @@
                     </li>
                 </ul>
                     <div class="copyright">
-                        <p>Copyright © 2019</p>
+                        <p>Copyright © 2020</p>
                     </div>
                 </footer>
 
